# classofsqlite

./: CMakeLists.txt  SqliteOperator.cpp  SqliteOperator.h  main.cpp
